Add another algorithm to three sum
Iterate the sorted array(but the last two) for the first
element, and search from both side to center in the rest
to find the second and the third element.

--- a/015-3sum.md
+++ b/015-3sum.md
@@ -21,7 +21,7 @@
 ## Solution
 
 - Brute-Force
-	
+
 	暴力算法永生，遍历列表，找到结果，时间复杂度 O(n^3)，还要注意别找到重复的组合！！！
 
 - Brute-Force + Binary Search
@@ -32,11 +32,23 @@
 
 	前两个数穷举，着第三个数使用hash的话，可以把搜索复杂度降低到 O(1)，时间复杂度为 O(n^2)，空间复杂度 O(n)
 
+- Search
+
+	发现了更牛逼的算法，排序数组后，枚举第一个值，范围是 [0, n-2)，然后在右边部分从两边往中间搜索。该算法可以推广到 4sum，5sum，6sum...
+
+	比如 `[-2,-1,-1,1,1,2]`
+
+	我们枚举 `[-2,-1,-1,1]`，当第一个数选 `-2` 时，我们在右边 `[-1,-1,1,1,2]` 里面从两边往中间搜索。起始位置第二个数即 `-1`，第三个数即 `2`，第二个数往右边取，可以使得结果变大，第三个数往左边来，可以使得结果变小。这样，如果相加结果比大于 `0`，我们可以让第三个数往左边去一点，反之，我们让第二个书往右边来一点。
+
+	这样时间复杂度降低到了 O(n^2)，空间复杂度仍然为 O(1)
+
 ## Code
 
 ### Python
 
-wait minute
+```python
+# wait minute
+```
 
 ### C++
 
@@ -53,17 +65,13 @@ public:
         int size = num.size();
         for (int first = 0; first < size - 2; ++first) {
             for (int second = first + 1; second < size - 1; ++second) {
-				// 二分查找第三个数
+                // 二分查找第三个数
                 int low = second + 1, high = size;
                 const int target = - num[first] - num[second];
                 while (low < high) {
                     const int mid = (low + high) / 2;
                     if (target == num[mid]) {
-                        vector<int> triplet;
-                        triplet.push_back(num[first]);
-                        triplet.push_back(num[second]);
-                        triplet.push_back(target);
-                        result.push_back(triplet);
+                        result.push_back(vector<int>({num[first], num[second], target}));
                         break;
                     } else if (target < num[mid]) {
                         high = mid;
@@ -71,20 +79,76 @@ public:
                         low = mid + 1;
                     }
                 }
-                
-				// 注意防止重复
+
+                // 注意防止重复
                 while (second + 1 < size - 1 && num[second] == num[second + 1]) {
                     second++;
                 }
             }
-            
 
-			// 注意防止重复
+
+            // 注意防止重复
             while (first + 1 < size - 2 && num[first] == num[first + 1]) {
                 first++;
             }
         }
-        
+
+        return result;
+    }
+};
+```
+
+### C++ 相向搜索版本
+```cpp
+class Solution {
+public:
+    vector<vector<int> > threeSum(vector<int> &num) {
+        vector<vector<int> > result;
+        if (num.size() < 3) {
+            return result;
+        }
+        sort(num.begin(), num.end());
+        for (auto first = num.begin(); first < prev(num.end(), 2); ++first) {
+            auto second = next(first);
+            auto third = prev(num.end());
+            while (second < third) {
+                int total = *first + *second + *third;
+                // 避免重复
+                if (total == 0) {
+                    result.push_back(vector<int>({*first, *second, *third}));
+                    while (second < third && *(next(second)) == *second)
+                    {
+                        ++second;
+                    }
+                    ++second;
+                    while (second < third && *(prev(third)) == *third)
+                    {
+                        --third;
+                    }
+                    --third;
+                } else if (total < 0) {
+                    // 避免重复
+                    while (second < third && *(next(second)) == *second)
+                    {
+                        ++second;
+                    }
+                    ++second;
+                } else if (total > 0) {
+                    // 避免重复
+                    while (second < third && *(prev(third)) == *third)
+                    {
+                        --third;
+                    }
+                    --third;
+                }
+            }
+
+            // 避免重复
+            while (first < prev(num.end(), 2) && *(next(first)) == *first) {
+                ++first;
+            }
+        }
+
         return result;
     }
 };
